# notebooks-to-production

./: .gitignore  README.md  main.py  penguins_notebook.ipynb  penguins_notebook_function_stubs.py  penguins_refactored.py  penguins_simple_script.py  pyproject.toml  requirements.txt  test_penguins_refactored.py
answers/: ai_refactoring.py  modular_code_full_solution.py  test_full_solution.py  unit_tests_full_solution.py
exercises/: modular_code_exercise.py  modular_code_function_stubs.py  simple_script.py  test_modular_code_exercise.py
