[project]
name = "notebooks-to-production"
version = "0.1.0"
description = "PyData Seattle 2025 tutorial: Going from Notebooks to Production Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
]
